internal/testdata/sdk/error/fixtures/optional_string_error.go
// This file was auto-generated by Fern from our API Definition.

package api

import (
	json "encoding/json"
	core "github.com/fern-api/fern-go/internal/testdata/sdk/error/fixtures/core"
)

type OptionalStringError struct {
	*core.APIError
	Body *string
}

func (o *OptionalStringError) UnmarshalJSON(data []byte) error {
	if len(data) == 0 {
		o.StatusCode = 500
		return nil
	}
	var body *string
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	o.StatusCode = 500
	o.Body = body
	return nil
}

func (o *OptionalStringError) MarshalJSON() ([]byte, error) {
	if o.Body == nil {
		return nil, nil
	}
	return json.Marshal(o.Body)
}
